force-app/main/default/objects/Account/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <label>Test2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>