force-app/main/default/objects/Account/fields/Test3__c.field-meta.xml
<CustomField>
    <fullName>Test3__c</fullName>
    <label>Test3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>