force-app/main/default/objects/Account/fields/Test4__c.field-meta.xml
<CustomField>
    <fullName>Test4__c</fullName>
    <label>Test4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>